--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 aho-corasick = "1.1.2"
 anyhow = "1.0.75"
-regex = "1.10.2"
+regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
 
 [dev-dependencies]
 indoc = "2.0.4"
