--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ memchr = "2.6.4"
 num = "0.4.1"
 rayon = "1.8.0"
 regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
+rustc-hash = "1.1.0"
 
 [dev-dependencies]
 indoc = "2.0.4"
