--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "aoc2023"
 version = "0.1.0"
 edition = "2021"
 
+[[bench]]
+name = "benchmark"
+harness = false
+
 [dependencies]
 aho-corasick = "1.1.2"
 anyhow = "1.0.75"
@@ -13,4 +17,5 @@ regex = { version = "1.10.2", default-features = false, features = ["std", "perf
 rustc-hash = "1.1.0"
 
 [dev-dependencies]
+criterion = "0.5.1"
 indoc = "2.0.4"
