--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ harness = false
 [dependencies]
 aho-corasick = "1.1.2"
 anyhow = "1.0.75"
+indexmap = "2.1.0"
 memchr = "2.6.4"
 num = "0.4.1"
 rayon = "1.8.0"
