--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ anyhow = "1.0.75"
 indexmap = "2.1.0"
 memchr = "2.6.4"
 num = "0.4.1"
+petgraph = "0.6.4"
 rayon = "1.8.0"
 regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
 rustc-hash = "1.1.0"
+spliter = "0.1.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
