--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ indexmap = "2.1.0"
 memchr = "2.6.4"
 num = "0.4.1"
 petgraph = "0.6.4"
+rand = "0.8.5"
 rayon = "1.8.0"
 regex = { version = "1.10.2", default-features = false, features = ["std", "perf"] }
 rustc-hash = "1.1.0"
