--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ aho-corasick = "1.1.2"
 anyhow = "1.0.75"
 indexmap = "2.1.0"
 memchr = "2.6.4"
+nalgebra = "0.32.3"
 num = "0.4.1"
 petgraph = "0.6.4"
 rand = "0.8.5"
